[gd_scene load_steps=11 format=2]

[ext_resource path="res://Assets/Grid/GridMapGenerator.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/CameraMover/CameraMover.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/GridBitMaps/res3.tres" type="Resource" id=3]
[ext_resource path="res://Assets/Grid/GridCore.gd" type="Script" id=4]
[ext_resource path="res://Assets/CursorTile/CursorTile.tscn" type="PackedScene" id=5]
[ext_resource path="res://Assets/UIBuilder/UIBuilder.tscn" type="PackedScene" id=6]
[ext_resource path="res://Assets/CursorTile/CursorPoint.tscn" type="PackedScene" id=7]
[ext_resource path="res://Assets/Cursor/Cursor.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/PathfindAsync/PathfindAsync.tscn" type="PackedScene" id=9]
[ext_resource path="res://Assets/Enemy/EnemyAI.tscn" type="PackedScene" id=10]

[node name="Spatial" type="Spatial"]

[node name="GridCore" type="Spatial" parent="."]
script = ExtResource( 4 )
world_size = Vector2( 32, 32 )
grid_bitmap_res = ExtResource( 3 )

[node name="GridMapGenerator" parent="GridCore" instance=ExtResource( 1 )]

[node name="CameraMover" parent="GridCore" instance=ExtResource( 2 )]
v_rot_min = -45.0
max_zoom = 100.0

[node name="CursorTile" parent="GridCore" instance=ExtResource( 5 )]

[node name="CursorPoint" parent="GridCore" instance=ExtResource( 7 )]

[node name="Cursor" parent="GridCore" instance=ExtResource( 8 )]

[node name="PathfindAsync" parent="GridCore" instance=ExtResource( 9 )]

[node name="EnemyAI" parent="GridCore" instance=ExtResource( 10 )]

[node name="DebugPathfindCells" type="Spatial" parent="GridCore"]

[node name="Enemyes" type="Spatial" parent="GridCore"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="UIBuilder" parent="UI" instance=ExtResource( 6 )]

[connection signal="update_builders" from="GridCore/GridMapGenerator" to="GridCore" method="_on_GridMap_update_builders" flags=3]
[connection signal="select_rect" from="GridCore/CursorTile" to="GridCore" method="_on_CursorTile_select_rect"]
[connection signal="click_global" from="GridCore/CursorPoint" to="GridCore" method="_on_CursorPoint_click_global"]
[connection signal="change_build_mode" from="UI/UIBuilder" to="GridCore" method="_on_UIBuilder_change_build_mode"]
[connection signal="clear_game" from="UI/UIBuilder" to="GridCore" method="_on_UIBuilder_clear_game"]
[connection signal="entered_game_zone" from="UI/UIBuilder" to="GridCore" method="_on_UIBuilder_entered_game_zone"]
[connection signal="exit_game_zone" from="UI/UIBuilder" to="GridCore" method="_on_UIBuilder_exit_game_zone"]
